tests/mediawiki/fail/latest/includes/DefaultSettings.php
$wgVersion = '1.23.4';
